crates/graphite/tests/ui/graph_duplicate_node_key.stderr
error: 識別子 `tanaka` は既に宣言されています
  --> tests/ui/graph_duplicate_node_key.rs:35:9
   |
35 |         tanaka = Employee { name: "田中2".into(), id: 2 },
   |         ^^^^^^

error: 最初の宣言はこちら
  --> tests/ui/graph_duplicate_node_key.rs:33:9
   |
33 |         tanaka = Employee { name: "田中".into(), id: 1 },
   |         ^^^^^^
